# ag2

./: .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  MAINTAINERS.md  README.md  _typos.toml  justfile  pyproject.toml  setup_autogen.py
.devcontainer/python-3.14/: devcontainer.json
.github/: CODEOWNERS  dependabot.yml  labeler.yml  zizmor.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/review/: TRIAGE_AI_TASKS.md  TRIAGE_POLICY.md
.github/workflows/: beta-llm-test.yml  beta-test.yml  build-docs.yml  build-mkdocs.yml  claude-code-review.yml  claude.yml  cli-package.yml  contrib-graph-rag-tests.yml  contrib-llm-test.yml  contrib-test.yml  core-llm-test.yml  core-test.yml  deploy-website.yml  docs-check-broken-links.yml  integration-test.yml  lfs-check.yml  llm-test.yml  mkdocs-check-broken-links.yml  pr-checks.yml  pr_labeler.yaml  python-package.yml  test-with-optional-deps.yml  test.yml  type-check.yml  zizmor.yml
ag2/: __init__.py  _import_utils.py  _telemetry_consts.py  agent.py  aggregate.py  assembly.py  compact.py  context.py  history.py  plugin.py  spec.py  stream.py  task.py  testing.py  textual.py  usage.py  utils.py  version.py  watch.py
ag2/a2a/: __init__.py  card.py  client.py  config.py  errors.py  events.py  executor.py  extension.py  server.py  testing.py
ag2/a2ui/: __init__.py  _runtime.py  actions.py  capabilities.py  dispatch.py  events.py  incoming.py  middleware.py  request.py  serialize.py  server.py  server_action.py
ag2/acp/: __init__.py  bridge.py  client.py  config.py  events.py  mappers.py  permissions.py  session.py  testing.py  types.py
ag2/ag_ui/: events.py  stream.py
ag2/config/: __init__.py  client.py  config.py
ag2/eval/: __init__.py  _types.py  events.py  pairwise.py  reporters.py  scorer.py  trace.py
ag2/events/: __init__.py  _serialization.py  base.py  conditions.py  input_events.py  lifecycle.py  sizing.py  task_events.py  tool_events.py  types.py  voice.py
ag2/extensions/: __init__.py
ag2/files/: api.py  types.py
ag2/knowledge/: __init__.py  base.py  bootstrap.py  config.py  constants.py  log.py  sqlite.py
ag2/live/: __init__.py  gemini.py  observer.py  openai.py  realtime.py  sound_device.py  stt.py
ag2/mcp/: __init__.py  errors.py  executor.py  info.py  mappers.py  security.py  server.py  sessions.py  testing.py  tools.py
ag2/mcp_ui/: __init__.py  actions.py  resources.py
ag2/middleware/: __init__.py  base.py
ag2/network/: __init__.py  auth.py  envelope.py  errors.py  handoff.py  ids.py  task_mirror.py  workflow_helpers.py
ag2/observers/: __init__.py  loop_detector.py  observer.py  token_monitor.py
ag2/policies/: __init__.py  _pairing.py  alert.py  conversation.py  episodic_memory.py  sliding_window.py  token_budget.py  working_memory.py
ag2/response/: callable.py  prompted.py  proto.py  schema.py
ag2/streams/: __init__.py
ag2/tools/: __init__.py  executor.py  tool.py
autogen/: __init__.py  code_utils.py  exception_utils.py  token_count_utils.py  version.py
autogen/_website/: generate_mkdocs.py  notebook_processor.py  process_notebooks.py
autogen/a2a/: __init__.py  agent_executor.py  client.py  client_factory.py  errors.py  httpx_client_factory.py  server.py  utils.py
autogen/ag_ui/: __init__.py  adapter.py  asgi.py
autogen/agentchat/: __init__.py  agent.py  assistant_agent.py  chat.py  conversable_agent.py  eligibility_policy.py  groupchat.py  user_proxy_agent.py  utils.py
autogen/beta/: __init__.py  _telemetry_consts.py  agent.py  aggregate.py  annotations.py  assembly.py  compact.py  context.py  conversable.py  exceptions.py  history.py  hitl.py  knowledge.py  observer.py  plugin.py  spec.py  stream.py  task.py  testing.py  textual.py  usage.py  (+1 more)
cli/: README.md  pyproject.toml
notebook/: agent_tools_run_examples.ipynb  agentchat_JSON_mode_example.ipynb  agentchat_MathChat.ipynb  agentchat_RetrieveChat.ipynb  agentchat_RetrieveChat_couchbase.ipynb  agentchat_RetrieveChat_mongodb.ipynb  agentchat_RetrieveChat_pgvector.ipynb  agentchat_RetrieveChat_qdrant.ipynb  agentchat_agenteval_cq_math.ipynb  agentchat_agentops.ipynb  agentchat_agentoptimizer.ipynb  agentchat_agents_wikipedia.ipynb  agentchat_anthropic_structured_outputs.ipynb  agentchat_assistant_agent_standalone.ipynb  agentchat_auto_feedback_from_code_execution.ipynb  agentchat_azr_ai_search.ipynb  agentchat_bedrock_client_example.ipynb  agentchat_bedrock_client_exponential_backoff_and_retry_config.ipynb  agentchat_bedrock_client_structured_output.ipynb  agentchat_captainagent.ipynb  agentchat_captainagent_crosstool.ipynb  agentchat_config_loader_utility_functions.ipynb  agentchat_cost_token_tracking.ipynb  agentchat_custom_events.ipynb  agentchat_custom_model.ipynb  agentchat_dalle_and_gpt4v.ipynb  agentchat_databricks_dbrx.ipynb  agentchat_daytona_executor.ipynb  agentchat_function_call.ipynb  agentchat_function_call_async.ipynb  agentchat_function_call_code_writing.ipynb  agentchat_function_call_currency_calculator.ipynb  agentchat_function_call_currency_converter_tool_api.ipynb  agentchat_function_target_example.ipynb  agentchat_gemini_thinking_config_example.ipynb  agentchat_gpt-5_verbosity_example.ipynb  agentchat_gpt5.1_apply_patch_example.ipynb  agentchat_gpt5.1_in_built_tools_example.ipynb  agentchat_gpt5.1_shell_tool_example.ipynb  agentchat_graph_rag_falkordb.ipynb  (+90 more)
scripts/: pre-commit-license-check.py  pre-commit-lint.sh  pre-commit-mypy-run.sh  show-coverage-report.sh  test-core-llm.sh  test-llm.sh  test-skip-llm.sh  test.sh
test/: AGENTS.md  conftest.py  const.py  credentials.py  marks.py  test_agent_resume.py  test_aggregate.py  test_alert_halt.py  test_assembly.py  test_browser_utils.py  test_code_utils.py  test_compact.py  test_conftest.py  test_history.py  test_llm_config.py  test_logging.py  test_notebook.py  test_task.py  test_test_client.py  test_usage.py  test_watch.py  test_watch_advanced.py  twoagent.py  utils.py
website/: .gitignore  AGENTS.md  blogs_and_user_stories_authors.yml  mint-json-template.json.jinja  package-lock.json  package.json
(+2171 files in other folders)
